# kasra

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  claude_desktop_config.example.json  docker-compose.yml  kasra-audit.jsonl  pyproject.toml  test_kasra.db-shm  test_kasra.db-wal
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: __init__.py  env.py
alembic/versions/: 0001_initial_schema.py  __init__.py
app/: __init__.py  __main__.py  config.py  database.py  db_migration.py  frontend_server.py  logging.py  main.py  mcp_server.py  metrics.py
app/api/: audit.py  categories.py  dashboard.py  dictionaries.py  health.py  proxy.py  router.py  rules.py  scan.py
app/models/: __init__.py  audit_chain.py  audit_log.py  category.py  custom_rule.py  dictionary.py  pattern_type.py  rule_config.py  user.py  user_behavior.py
app/proxy/: http_proxy.py  tcp_proxy.py
app/schemas/: audit.py  category.py  dashboard.py  dictionary.py  pattern_type.py  rules.py  scan.py
app/scripts/: migrate_dictionaries.py
app/services/: audit_chain.py  audit_service.py  category_service.py  dashboard_service.py  dictionary_service.py  engine_service.py  pattern_type_service.py  rules_service.py  scan_service.py
config/: app.yaml
configs/: README.md
configs/hooks/: claude-hooks.json  kasra-hook.sh
data/: kasra-audit.jsonl  kasra.db  kasra.db-shm  kasra.db-wal
db/: migrate.sh
db/init/: 01-ddl.sql  02-dml.sql  02-master-data.sql  init.sh  seed_sqlite.py
db/init/rules/: cr-series.json  i-series.json  o-series.json
db/migrations/: 001-init-schema.sql  001-rollback.sql  002-categories-pattern-types.sql
deploy/: README.md  kasra.service  logrotate.conf  nginx.conf
deploy/fail2ban/: filter-kasra-auth.conf  jail.local
deploy/grafana/dashboards/: kasra-main.json
deploy/grafana/provisioning/dashboards/: kasra.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/nginx/: kasra.conf
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/scripts/: backup.sh  healthcheck.sh  restore.sh
deploy/systemd/: kasra.service
docs/: 01-input-rule-test.md  02-output-rule-test.md  03-code-review-test.md  04-enable-disable-test.md  05-database-test.md  06-playwright-e2e-test.md  test-plan.md
e2e/: package-lock.json  package.json  playwright.config.ts  rules.spec.ts
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/data/: kasra-audit.jsonl  kasra.db-shm  kasra.db-wal
frontend/src/: App.tsx  ErrorBoundary.tsx  auth.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Badge.tsx  ConfirmDialog.tsx  EmptyState.tsx  LoadingSkeleton.tsx  Pagination.tsx  SlideOver.tsx  Toast.tsx  Toggle.tsx  index.ts
frontend/src/pages/: AuditLogs.tsx  Categories.tsx  ComplianceReport.tsx  Dashboard.tsx  Dictionaries.tsx  Login.tsx  Rules.tsx  ScanConsole.tsx  Settings.tsx  UserBehavior.tsx
hooks/: claude-hooks.json  kasra-hook.sh
integration_tests/: conftest.py  test_code_review_rules.py  test_database_storage.py  test_input_rules.py  test_output_rules.py  test_rule_enable_disable.py
skills/: code-review.md
skills/code-review/: SKILL.md
skills/kasra-io-detect-input/: SKILL.md
skills/kasra-io-detect-output/: SKILL.md
system-test/io-tests/: 01-input-detection-en.md  01-input-detection-jp.md  01-input-detection-zh.md  01-output-detection-en.md  01-output-detection-jp.md  01-output-detection-zh.md  run_input_cases.py  run_output_cases.py
tests/: conftest.py  test_audit_api.py  test_config.py  test_dashboard_api.py  test_file_scan.py  test_health.py  test_integration.py  test_mcp.py  test_proxy.py  test_rules_api.py  test_scan_api.py  test_security.py
