[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kasra"
version = "0.1.0"
description = "Kasra AI Development Security Governance Platform — Main Application Server"
readme = "README.md"
license = { text = "Proprietary — Internal Use Only" }
authors = [
    { name = "Kasra AI Security", email = "dev@kasra.security" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "orjson>=3.9",
    "mcp>=1.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]
prod = [
    "psycopg2-binary>=2.9",
    "gunicorn>=22.0",
]

[project.scripts]
kasra = "app.__main__:main"
kasra-server = "app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "S"]
ignore = ["E501", "S101"]  # S101 = assert allowed (tests use assert)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::starlette.testclient.StarletteDeprecationWarning",
]
